--- a/HBmonitor/index_template.html
+++ b/HBmonitor/index_template.html
@@ -71,7 +71,7 @@
     <body style="font: 10pt arial, sans-serif;background-color: #ccc;">    
      <h1 class="logo1"><a href="http://associacioader.com/">
      <img src="http://associacioader.com/img/Logo_Ader.png" alt="" width="130" /></a></h1>
-         <h1 class="color_naranja_24"><center>Dashboard HBlink EA3EG</center></h1>
+         <h1 class="color_naranja_24"><center>Dashboard HBlink XXXXXX</center></h1>
          <!-- <h3><center><<<system_name>>></center></h3> -->
          <hr>
          <noscript>You must enable JavaScript</noscript>
